src/pages/index/style.css
:root {
  --card-color: rgb(30, 29, 36);
}
main {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  padding: 0px 10vw;
}
main .gradient {
  position: absolute;
  width: 100%;
  height: 100%;
  background: radial-gradient(
    80.10000000000001% 50% at 50% 0%,
    rgba(38, 140, 245, 0.25) 0%,
    rgba(38, 140, 245, 0) 100%
  );
}
main section {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: flex-start;
  height: 100vh;
  padding: 0px;
  max-width: 900px;
  width: 100%;
  pointer-events: none;
}
main section .social {
  transition: ease 0.6s all;
  transition-delay: 0.8s;
  margin-top: 10px;
  pointer-events: auto;
}
main section .social a {
  height: 24px;
  display: block;
  float: left;
}

main section *.animation {
  opacity: 0;
  top: 20px;
  position: relative;
}
main section *.animation.show {
  opacity: 1;
  top: 0;
}
main section .hello {
  font-size: 30px;
  color: #57cbff;
  font-family: "Roboto Mono", monospace, sans-serif;
  transition: ease 0.6s all;
  transition-delay: 0.2s;
}
main section h2 {
  font-family: var(--main-font);
  font-weight: bold;
  background-image: linear-gradient(
    98deg,
    rgb(255, 255, 255) 0%,
    rgb(127, 182, 213),
    rgb(127, 182, 213) 100%
  );
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  font-size: 100px;
  transition: ease 0.6s all;
  transition-delay: 0.4s;
}
main section .miniAbout {
  font-family: var(--main-font);
  color: #acb4cc;
  font-size: 25px;
  transition: ease 0.6s all;
  transition-delay: 0.6s;
}
@media only screen and (max-width: 750px) {
  main section .hello {
    font-size: 25px;
  }
  main section h2 {
    font-size: 70px;
  }
  main section .miniAbout {
    font-size: 20px;
  }
}
.about {
  height: auto;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 30px;
}
.about .element {
  padding: 20px;
  width: 900px;
  max-width: 100%;
  opacity: 0;
  top: 20px;
  position: relative;
  transition: ease 0.6s all;
  transition-delay: 0.4s;
}
.about .element.show {
  opacity: 1;
  top: 0;
}
.about .element .title {
  margin-bottom: 10px;
  color: #57cbff;
  font-family: "Roboto Mono", monospace, sans-serif;
  font-size: 40px;
  position: relative;
  width: fit-content;
}
.about .element p {
  width: 100%;
  font-size: 20px;
  margin-top: 10px;
  color: #ccd6f6;
  font-family: var(--main-font);
}
.about .element .button .buttonContainer {
  max-width: fit-content;
  color: white;
  text-decoration: none;
  padding: 20px;
  font-family: var(--main-font);
  background-color: #17315e;
  border-radius: 10px;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
  scale: 1;
  transition:
    ease 0.4s scale,
    opacity 0.2s 0.5s ease,
    top 0.2s 0.5s ease;
  opacity: 0;
  top: -10px;
  position: relative;
}
.about .element .button .buttonContainer.show {
  opacity: 1;
  top: 0;
}
.about .element .button .buttonContainer:hover {
  scale: 1.1;
}
.about .element .button {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: 30px;
}
.skills {
  height: auto;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 30px;
}
.skills .element {
  width: 900px;
  max-width: 100%;
  opacity: 0;
  top: 20px;
  position: relative;
  transition: ease 0.5s all;
  transition-delay: 0.5s;
}
.skills .element.show {
  opacity: 1;
  top: 0;
}
.skills .element .title {
  margin-bottom: 10px;
  color: #57cbff;
  font-family: "Roboto Mono", monospace, sans-serif;
  font-size: 40px;
  position: relative;
  width: fit-content;
}
.skills .element p {
  width: 100%;
  font-size: 20px;
  margin-top: 10px;
  color: #ccd6f6;
  font-family: var(--main-font);
}
.skills .element .skillsGrid {
  grid-template-columns: repeat(2, minmax(50%, 100%));
  display: grid;
  gap: 0px 10px;
  list-style: none;
}
.skills .element .skillsGrid li {
  color: #ccd6f6;
  font-family: var(--main-font);
  padding: 10px;
}
.skills .element .skillsGrid li .name {
  float: left;
  font-weight: 600;
}
.skills .element .skillsGrid li .name .ucimse {
  margin-left: 10px;
  color: rgb(54, 197, 54);
}
.skills .element .skillsGrid li .percentage {
  float: right;
}
.skills .element .skillsGrid .slider {
  width: 100%;
  height: 10px;
  background-color: white;
  margin-top: 25px;
  border-radius: 5px;
}
.skills .element .skillsGrid .slider .slide {
  height: 100%;
  background-color: #57cbff;
  border-radius: 5px;
  width: 0%;
  transition: ease 0.7s width;
  transition-delay: 0.6s;
}
.skills .element .skillsGrid.show .slider .slide.html {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.css {
  width: 80%;
}
.skills .element .skillsGrid.show .slider .slide.js {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.react {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.bash {
  width: 70%;
}
.skills .element .skillsGrid.show .slider .slide.linux {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.java {
  width: 90%;
}
.skills .element .skillsGrid.show .slider .slide.spring {
  width: 30%;
}
.skills .element .skillsGrid.show .slider .slide.python {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.php {
  width: 40%;
}
.skills .element .skillsGrid.show .slider .slide.typescript {
  width: 85%;
}
.skills .element .skillsGrid.show .slider .slide.git {
  width: 95%;
}
.skills .element .skillsGrid.show .slider .slide.sql {
  width: 65%;
}
.skills .element .skillsGrid.show .slider .slide.nodejs {
  width: 90%;
}
.skills .element .skillsGrid.show .slider .slide.nextjs {
  width: 90%;
}
@media only screen and (max-width: 600px) {
  .skills .element .skillsGrid {
    grid-template-columns: repeat(1, minmax(50%, 100%));
  }
}
.certifikaty {
  height: auto;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 30px;
}
.certifikaty .element {
  padding: 20px;
  width: 1201px;
  max-width: 100%;
}
/* ... */

